# Wornitor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/migrations/: 001_init.sql  002_add_indexes.sql  003_api_key.sql  004_cost_tracking.sql  005_add_use_batch_api.sql  006_add_segment_cost.sql
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: analysis.rs  config.rs  db.rs  mod.rs  report.rs  screenshot.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src-tauri/src/image/: mod.rs
src-tauri/src/llm/: adapter.rs  kimi_batch.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/scheduler/: mod.rs
src-tauri/src/screen/: capture.rs  error.rs  mod.rs  state.rs
src/components/Report/: index.tsx
src/components/Settings/: index.tsx
src/components/Timeline/: index.tsx
src/components/common/: index.ts
src/hooks/: useTauriEvent.ts
src/i18n/: en.ts  index.tsx  zh.ts
src/lib/: tauri.ts
src/stores/: useConfigStore.ts  useReportStore.ts  useScreenshotStore.ts
src/types/: index.ts
